// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-parameters.yml - yaml-verify 1`] = `
%YAML 1.2
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%YAML 1.2
---

`;

exports[`without-parameters.yml - yaml-verify 1`] = `
%SOMETHING
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%SOMETHING
---

`;
